fix: DIPA-157 text align milestone status

--- a/frontend/projects/dipa-frontend/src/app/modules/gantt/chart/chart.component.scss
+++ b/frontend/projects/dipa-frontend/src/app/modules/gantt/chart/chart.component.scss
@@ -166,33 +166,6 @@
 
 }
 
-.mat-card-header {
-  padding-left: 5%;
-  display: flex;
-  height: 50px;
-  box-sizing: border-box;
-  align-items: center;
-  border-bottom: solid 1px rgba(0,0,0,0.12);
-  color: rgba(0,0,0,0.6);
-
-  .title {
-    margin-right: auto;
-    font-weight: 500;
-  }
-}
-
-.mat-card-content {
-  padding-left: 5%;
-  padding-top: 5%;
-  position: absolute;
-  overflow: hidden;
-
-}
-
-.mat-radio-button {
-  margin-left: 8%;
-}
-
 .container {
   width: 100%;
   height: 100%;
@@ -212,5 +185,35 @@ mat-sidenav {
   background-color: white;
   height: 100%;
   position: relative;
-  // overflow: hidden;
+}
+
+.card-header {
+  padding-left: 5%;
+  display: flex;
+  height: 50px;
+  box-sizing: border-box;
+  align-items: center;
+  border-bottom: solid 1px rgba(0,0,0,0.12);
+  color: rgba(0,0,0,0.6);
+
+  .title {
+    margin-right: auto;
+    font-weight: 500;
+  }
+}
+
+.card-content {
+  padding-left: 5%;
+  padding-top: 5%;
+  position: static;
+  overflow: hidden;
+  // text-align: center;
+}
+
+.name-container {
+  text-align: center;
+}
+
+.mat-radio-button {
+  margin-left: 8%;
 }
